# randname

./: .gitignore  404.html  CONTRIBUTION.md  DATABASE.md  DATABASE_GUIDE.md  MANIFEST.in  Makefile  README.md  README_PYPI.md  dev_requriments.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.py  upload
.github/workflows/: check_lint.yml  check_types.yml  python-package.yml  release.yml  tests.yml
code/: index.html
contribution/: index.html
data/ES/first_names/: nombres_por_edad_media_2020_M.xls
data/US/first_names/: 2018_M.csv
database/: index.html
database/ES/first_names/: 2020_M
database/ES/last_names/: 2020_N
database/PL/first_names/: 2018_F  2018_M
database/US/first_names/: 1880_F  1880_M  1881_F  1881_M  1882_F  1882_M  1883_F  1884_M  1885_F  (+137 more)
docs/: code.md  conf.py  contribution.md  database.md  environment.md  index.md  index.rst  randname.rst  use-make.md
environment/: index.html
license/: index.html
randname/: __init__.py  __main__.py  database.py  error.py  errors.py  randname.py  rname.py
randnames/: __init__.py  __main__.py  randnames.py
source/: convert_to_json.py
src/: __main__.py  lastNames.json  name_errors.py  random_names_errors.py  randomnames.py
src/randname/: __init__.py  __main__.py  config.py  core.py  database.py  error.py
tests/: .test_randnames_us.py.swp  test_database.py  test_randname_all.py  test_randnames.py  test_randnames_es.py  test_randnames_pl.py  test_randnames_us.py  test_randomnames.py
tools/: convert_to_json.py  speed_test_100.csv  xlsx_to_json.py
use-make/: index.html
(+183 files in other folders)
